# NIST_tests

./: .gitignore  CMakeLists.txt  README.md  test_statistic.xlsx
src/: interface.cpp  main.cpp
src/Boltach/: RandomExcursionVariantTest.hpp  RunsTest.hpp  main.cpp  random_excursion_variant_test.hpp  random_excursion_variant_test_boltach.cpp  runs_test.hpp  runs_test_boltach.cpp  runs_test_boltach.hpp
src/Bondarev/: longest_runs_test_bondarev.cpp  random_excursions_test_bondarev.cpp
src/Evil_genius/: binary_matrix_rank_test_evil_genius.cpp  linear_complexity_test_evil_genius.cpp  non_overlapping_template_matching_test_evil_genius.cpp  spectral_test_evil_genius.cpp
src/Grudinsky/: approximate_entropy_test_grudinsky.cpp  spectral_test_grudinsky.cpp
src/Kruglic/: MaurersTest.cpp  OverlappingTemplateMatchingTest.cpp  maurers_test_kruglic.cpp  overlapping_template_matching_test_kruglic.cpp
src/Lagunov/: Cephes.h  LinearComplexityTest.cpp  NonOverlappingTemplateMatchingTest.cpp  linear_complexity_test_lagunov.cpp  non_overlapping_template_matching_test_lagunov.cpp
src/Lisai/: DiscreteFourierTransformTest.cpp  SerialTest.cpp  desktop.ini  serial_test_lisai.cpp  spectral_test_lisai.cpp
src/Timoshenko/: random_excursions_test.cpp  random_excursions_test_timoshenko.cpp  runs_test.cpp  runs_test_timoshenko.cpp
src/Vecherko/: BinaryMatrixRankTest.cpp  DiscreteFourierTrasformTest.cpp  LinearComplexityTest.cpp  NonOverlappingTemplateMatchingTest.cpp  RandomExcursionsVariantTest.cpp  binary_matrix_rank_test_vecherko.cpp  desktop.ini  linear_complexity_test_vecherko.cpp  non_overlapping_template_matching_test_vecherko.cpp  spectral_test_vecherko.cpp
src/Vorobiova/: CumulativeSumsTest.cpp  cumulative_sums_test_vorobiova.cpp
src/Zakrevsky/: NonOverlappingTemplateMatchingTest.cpp  SerialTest.cpp  cephes.cpp  non_overlapping_template_matching_test_zakrevsky.cpp  serial_test_zakrevsky.cpp
src/libraries/: approximate_entropy_test.hpp  approximate_entropy_test_grudinsky.hpp  binary_matrix_rank_test.hpp  binary_matrix_rank_test_evil_genius.hpp  binary_matrix_rank_test_vecherko.hpp  cumulative_sums_test.hpp  cumulative_sums_test_vorobiova.hpp  interface.hpp  linear_complexity_test.hpp  linear_complexity_test_evil_genius.hpp  linear_complexity_test_lagunov.hpp  linear_complexity_test_vecherko.hpp  longest_runs_test.hpp  (+27 more)
(+4 files in other folders)
